# FitTrack

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  index.html  pyproject.toml  service-worker.js
config/: manifest.json
scripts/components/: exercise-form.js  home-view.js  routine-view.js  workout-view.js
scripts/core/: app.js  database.js  router.js
scripts/services/: timer-service.js  workout-service.js
src/fittrack/: __init__.py  __main__.py  forms.py  models.py  run.py
src/fittrack/static/: style.css
src/fittrack/templates/: 404.html  500.html  base_template.html  index.html  login_form.html  my_routines.html  routine_view.html
src/fittrack/templates/admin/: routine_form.html  routine_form_edit.html  signup_form.html
styles/: main.css
